[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/Entities/Crate.png" type="Texture" id=1]
[ext_resource path="res://Interactable.gd" type="Script" id=2]
[ext_resource path="res://HUD/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Sounds/Break.ogg" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.504577, 0.506043, 0.513129 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
albedo_color = Color( 0.235294, 0.329412, 0.972549, 0.341176 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_billboard_mode = 1
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 1.5, 1 )

[sub_resource type="QuadMesh" id=11]

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=9]
resource_local_to_scene = true
render_priority = 1
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
params_billboard_mode = 2
albedo_texture = SubResource( 14 )
uv1_scale = Vector3( 0.731, 2.883, 1 )
uv1_offset = Vector3( 0.034, -1.106, 0 )

[node name="Interactable" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="DebugModel" type="MeshInstance" parent="."]
layers = 2
mesh = SubResource( 2 )
material/0 = SubResource( 13 )

[node name="InteractModel" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = null

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 300, 55 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="Viewport"]
margin_left = 10.0
margin_top = 2.0
margin_right = 216.0
margin_bottom = 60.0
theme = ExtResource( 3 )
text = "Cryochamber"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.1, 0, -0.5738, 0 )
visible = false
mesh = SubResource( 11 )
material/0 = SubResource( 9 )

[node name="BreakStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 10.0

[connection signal="finished" from="BreakStream" to="." method="_on_BreakStream_finished"]
